Updated login page, fixed button text alignment and menu scrolling cutoff issue
Updated login page to have continue as guest button, centered text on login/user/logout buttons on map page, and fixed issue where items in map menu were extending past the menu container

--- a/Web/laze/static/css/main.css
+++ b/Web/laze/static/css/main.css
@@ -158,6 +158,17 @@ iframe {
   color: #fff;
 }
 
+.text-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.small-text {
+  font-family: Varela-Round;
+  font-size: 13px;
+  line-height: 1.5;
+  color: #fff;
+}
 
 /*//////////////////////////////////////////////////////////////////
 [ login ]*/
